@@ -34,6 +34,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Email link (not automatically checked)')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -44,6 +45,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Phone number (not automatically checked)')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -54,6 +56,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Empty link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -64,6 +67,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Link to within the same page (not automatically checked)')
+        self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -74,6 +78,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, working internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -85,6 +90,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -95,6 +101,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -105,6 +112,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, working internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, '/http/anchor/')
@@ -116,6 +124,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, '/http/anchor/')
@@ -126,6 +135,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, '/http/anchor/')
@@ -136,6 +146,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect")
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, '/admin/login/?next=/admin/linkcheck')
@@ -146,6 +157,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken temporary redirect')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '404 Not Found')
         self.assertEqual(uv.redirect_to, '/non-existent/')
@@ -156,6 +168,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -167,6 +180,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -177,6 +191,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken internal link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '404 Not Found')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -187,6 +202,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Invalid URL')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -206,6 +222,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Missing Document')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -216,6 +233,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -229,6 +247,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -238,6 +257,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -251,6 +271,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -261,6 +282,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'SSL Error: wrong version number')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -271,6 +293,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, SSL certificate could not be verified')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -281,6 +304,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, broken external hash anchor, SSL certificate could not be verified')
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -291,6 +315,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found, SSL certificate could not be verified')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '404 Not Found')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -301,6 +326,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -311,6 +337,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -321,6 +348,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '301 Moved Permanently')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -331,6 +359,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '301 Moved Permanently')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/200/')
@@ -341,6 +370,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '302 Found')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/200/')
@@ -351,6 +381,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '404 Not Found')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -361,6 +392,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '301 Moved Permanently')
         self.assertEqual(uv.get_redirect_status_code_display(), '404 Not Found')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/404/')
@@ -372,6 +404,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -382,6 +415,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -392,6 +426,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Other Error: The read operation timed out')
+        self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.get_status_code_display(), None)
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -402,6 +437,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, working external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -413,6 +449,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -423,6 +460,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -433,6 +471,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, working external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/anchor/')
@@ -444,6 +483,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/anchor/')
@@ -454,6 +494,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.get_status_code_display(), '302 Found')
         self.assertEqual(uv.get_redirect_status_code_display(), '200 OK')
         self.assertEqual(uv.redirect_to, f'{self.live_server_url}/http/anchor/')
@@ -464,6 +505,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK")
+        self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
@@ -474,6 +516,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, failed to parse HTML for anchor")
+        self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.get_status_code_display(), '200 OK')
         self.assertEqual(uv.get_redirect_status_code_display(), None)
         self.assertEqual(uv.redirect_to, '')
